infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats-streaming:0.17.0
        args: [
          "-p",
          "4222",
          "-m",
          "8222",
          "-hbi", # hb = heartbeat | little request that nats will send to every connected client
          "1s", # hbi = how often the streaming server is going to make a hearbeat request to each of it's clients
          "-hbt", # hbt = How long each client has to respond the request
          "1s",
          "-hbf", # hbf = Number of times that each client can fail before that streaming server is going to block connection
          "2",
          "-SD",
          "-cid",
          "ticketing"
        ] # Arguments for image Command Line
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
  - name: client
    protocol: TCP 
    port: 4222
    targetPort: 4222 
  - name: monitoring
    protocol: TCP 
    port: 8222 
    targetPort: 8222
