infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders  # Asign a label (equal to the one in matchLabels) to the pod
    spec:
      containers:
        - name: orders
          image: "thomastheprogrammer/orders-service:dev"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders  # Asign a label (equal to the one in matchLabels of the orders deployment) to the pod
  ports:
  - name: orders 
    protocol: TCP
    port: 4000
    targetPort: 4000
