infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets  # Asign a label (equal to the one in matchLabels) to the pod
    spec:
      containers:
        - name: tickets
          image: "thomastheprogrammer/ticket-service:dev"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets  # Asign a label (equal to the one in matchLabels of the tickets deployment) to the pod
  ports:
  - name: tickets 
    protocol: TCP
    port: 4000
    targetPort: 4000
